tests/unit-fail-compilation/j023d.ref
j023d.c:2:7: error: Casting void type to non-void type.
  Undefined behavior (UB-CCV6). See C11 sec. 6.3.2.2:1, J.2:1 item 23
Translation failed (config dumped). Run kcc -d j023d.c to see commands run.
